--- a/Intro-Python/Intro-Python.ipynb
+++ b/Intro-Python/Intro-Python.ipynb
@@ -14,7 +14,7 @@
     "Inspired from the work of:\n",
     "\n",
     "- A. Gramfort (alexandre.gramfort@inria.fr) http://alexandre.gramfort.net/\n",
-    "- J.R. Johansson (robert@riken.jp) http://dml.riken.jp/~rob/\n",
+    "- J. R. Johansson (robert@riken.jp) http://dml.riken.jp/~rob/\n",
     "- P. Fuchs et P. Poulain https://python.sdv.univ-paris-diderot.fr/\n"
    ]
   },
@@ -24,7 +24,7 @@
    "source": [
     "## Shell, terminal and console\n",
     "\n",
-    "The **shell** is the program which actually processes commands and returns output. E.g Bash, zsh, etc... \n",
+    "The **shell** is the program which actually processes commands and returns output, e.g., Bash, zsh, etc... \n",
     "\n",
     "A **terminal** refers to a wrapper program which runs a shell.\n",
     "\n",
@@ -67,7 +67,7 @@
    "source": [
     "# How to launch a Python program\n",
     "\n",
-    "* A python script has an extension in \"`.py`\": \n",
+    "* A python script has an extension in `.py`: \n",
     "\n",
     "* Every lines of a python script are parsed and executed excepted **comments** starting by the symbol **`#`**.\n",
     "\n",
@@ -77,10 +77,10 @@
     "$ python my_script.py\n",
     "```\n",
     "\n",
-    "**Exemple:**\n",
+    "**Example:**\n",
     "\n",
-    "il faut d'abord télécharger le fichier `hello-world.py` dans un dossier ```HMMA238/Intro-Python/scripts/```.\n",
-    "Ce fichier est disponible ici: http://josephsalmon.eu/enseignement/Montpellier/HMMA238/hello-world.py\n",
+    "You have to download the file `hello-world.py` in the directory ```HMMA238/Intro-Python/scripts/```.\n",
+    "It is available here: http://josephsalmon.eu/enseignement/Montpellier/HMMA238/hello-world.py\n",
     "\n",
     "```\n",
     "$ ls scripts/\n",
@@ -422,14 +422,14 @@
     " * Les fonctions Python sont organisées par *modules*\n",
     " * Bibliothèque standard Python (*Python Standard Library*) : collection de modules donnant accès à des fonctionnalités de bases : appels au système d'exploitation, gestion des fichiers, gestion des chaînes de caractères, interface réseau, etc.\n",
     "\n",
-    "### Références\n",
+    "### References\n",
     " \n",
     " * The Python Language Reference: https://docs.python.org/3/reference/index.html\n",
     " * The Python Standard Library: http://docs.python.org/3/library/\n",
     "\n",
-    "### Utilisation des modules\n",
+    "### Using packages\n",
     "\n",
-    "* Un module doit être *importé* avant de pouvoir être utilisé, exemple :\n"
+    "* A package must be *imported* before it can be used:"
    ]
   },
   {
@@ -445,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * Le module math peut maintenant être utilisé dans la suite du programme :"
+    " * The `math` package can now be used :"
    ]
   },
   {
@@ -454,7 +454,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
     "x = math.cos(2 * math.pi)\n",
     "print(x)"
    ]
@@ -463,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ou bien en important que les fonctions dont on a besoin ce qui peut être plus claire pour la suite"
+    "Another way to use a pacakge is to import only the functions that you need:"
    ]
   },
   {
@@ -481,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Méthode déconseillé: charger toutes les fonctions d'un module (avec le risque de redéfinir des fonctions sans s'en rendre compte)."
+    "WARNING: do not load all functions from a package, there is a risk that you redefine some existing functions without noticing."
    ]
   },
   {
@@ -490,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import *\n",
+    "from math import *  # NEVER DO THAT\n",
     "tanh(1)"
    ]
   },
@@ -498,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Méthode courante: donner un nom abrégé au module (on verra des abréviations classique: np, pd, sns, plt, skl, etc.)"
+    "Popular method: use a nickname for a package (we will see classical ones like: `np, pd, sns, plt, skl,` etc.)"
    ]
   },
   {
@@ -515,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Connaitre le contenu d'un module\n",
+    "### Inspecting a package\n",
     "\n",
     " * Une fois un module importé on peut lister les symboles disponibles avec la fonction `dir`:"
    ]
@@ -618,7 +617,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'> EXERCICE : Écrire un code qui calcule la première puissance de 2 supérieure à un nombre $n$ </font>"
+    "### <font color='red'> EXERCISE : log </font>\n",
+    "Write a code that computes the first power of 2 above a given number $n$."
    ]
   },
   {
@@ -1031,7 +1031,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'>EXERCICE : A partir des lettres de l'alphabet, générer par une operation de slicing la chaîne de charactère *cfilorux*</font>"
+    "### <font color='red'>EXERCISE : slicing and strings</font>\n",
+    "A partir des lettres de l'alphabet, générer par une operation de slicing la chaîne de charactère *cfilorux*"
    ]
   },
   {
@@ -1148,7 +1149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Important Note:** In Python, Strings are immutable. Consider the following code"
+    "**Important note:** In Python, Strings are immutable. Consider the following code:"
    ]
   },
   {
@@ -1166,7 +1167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is because `x.replace(\"Guru99\", \"Python\")` returns a copy of X with replacements made.You will need to use the following code to observe changes\n"
+    "This is because `x.replace(\"Guru99\", \"Python\")` returns a copy of X with replacements made.You will need to use the following code to observe changes.\n"
    ]
   },
   {
@@ -1213,7 +1214,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plus d'info sur les formats:\n",
+    "### <font color='red'> EXERCISE : $e$ digits</font>\n",
+    "Print the real number $e=\\exp(1)$ with 1, 10, 20 and 50 digits (one number by line).  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XXX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More info on the formats:\n",
     "\n",
     "- https://mkaz.blog/code/python-string-format-cookbook/\n",
     "- https://docs.python.org/3/library/string.html"
@@ -1225,19 +1243,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plus avancé\n",
+    "# More advance\n",
     "print(\"val = {0:1.15f},val2={1:1.15f}\".format(a, b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-a0249720ba91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Le nombre {0:s} est égal à {1:1.111}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pi\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'math' is not defined"
+     ]
+    }
+   ],
    "source": [
     "s = \"Le nombre {0:s} est égal à {1:1.111}\"\n",
-    "print(s.format(\"pi\", math.pi))\n",
-    "# print s % (\"e\", math.exp(1.))"
+    "print(s.format(\"pi\", math.pi))"
    ]
   },
   {
@@ -1294,7 +1323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Attention:** On commence à indexer à 0!"
+    "**WARNING:** On commence à indexer à 0!"
    ]
   },
   {
@@ -1310,7 +1339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Attention** au passage par adresse!"
+    "**WARNING:** au passage par adresse!"
    ]
   },
   {
@@ -1456,7 +1485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Attention:** l2.sort() fait la modification **inplace** et ne renvoie rien, c'est-à-dire que l'on renvoie `None`"
+    "**WARNING:** l2.sort() fait la modification **inplace** et ne renvoie rien, c'est-à-dire que l'on renvoie `None`"
    ]
   },
   {
@@ -1671,12 +1700,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Map and "
+    "### Map and zip"
    ]
   },
   {
@@ -1827,7 +1854,7 @@
     "          \"parameter2\": 2.0,\n",
     "          \"parameter3\": 3.0}\n",
     "\n",
-    "# ou bien\n",
+    "# Alternatively:\n",
     "\n",
     "params = dict(parameter1=1.0, parameter2=2.0, parameter3=3.0)\n",
     "\n",
@@ -2093,6 +2120,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2177,7 +2211,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'>EXERCICE : Compter le nombre d'occurences de chaque charactère dans la chaîne de caractères \"HelLo WorLd!!\" On renverra un dictionaire qui à la lettre associe son nombre d'occurences.</font>"
+    "### <font color='red'>EXERCISE : counting letters</font>\n",
+    "Compter le nombre d'occurences de chaque charactère dans la chaîne de caractères \"HelLo WorLd!!\".   \n",
+    "On renverra un dictionaire qui à la lettre associe son nombre d'occurences."
    ]
   },
   {
@@ -2196,10 +2232,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'>EXERCICE : Message codé par inversion de lettres (aussi appelé [code de César](https://fr.wikipedia.org/wiki/Chiffrement_par_d%C3%A9calage))</font>\n",
+    "### <font color='red'>EXERCISE : Caesar cipher </font>\n",
     "\n",
-    "Proposer une manipulation qui permet de faire le codage et le décodage avec le code fournit dessous"
+    "Proposer une manipulation qui permet de faire le codage et le décodage avec le code fournit dessous, en suivant la méthode de César, ou code par inversion de lettres (aussi appelé [code de César](https://fr.wikipedia.org/wiki/Chiffrement_par_d%C3%A9calage))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2278,8 +2321,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'>Exercice: Calculer une approximation de $\\pi$ par la formule de Wallis (avec une boucle `for`)</font>\n",
-    "\n",
+    "### <font color='red'>EXERCISE: An old $\\pi$ approximation</font>\n",
+    "    \n",
+    "Calculer une approximation de $\\pi$ par la formule de Wallis (avec une boucle `for`)\n",
     "\\begin{align}\n",
     "    \\text{Formule de Wallis:}\\quad \\pi&= 2 \\cdot\\prod_{n=1}^{\\infty }\\left({\\frac{4 n^{2}}{4 n^{2} - 1}}\\right)\n",
     "\\end{align}\n",
@@ -2289,12 +2333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# XXX\n",
-    "\n"
+    "# XXX"
    ]
   },
   {
@@ -2520,8 +2563,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='red'>Exercice: implémenter l'algorithme de tri *quicksort*\n",
-    "</font>\n",
+    "### <font color='red'>EXERCISE: *quicksort*</font>\n",
     "\n",
     "La [page wikipedia](http://en.wikipedia.org/wiki/Quicksort)\n",
     " décrivant l’algorithme de tri *quicksort* donne le pseudo-code suivant:\n",
@@ -2576,8 +2618,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def varargin(*arg):\n",
-    "    for i in arg: print(i, end=\" \")\n",
+    "def varargin(*args):\n",
+    "    for i in args: print(i, end=\" \")\n",
     "    print(\"\\n\")\n",
     "\n",
     "varargin(3,4,5)\n",
@@ -3004,7 +3046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -3015,7 +3057,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "308.833px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
