more cosmits / pep8 / english (still on going)

--- a/Intro-Python/Intro-Python.ipynb
+++ b/Intro-Python/Intro-Python.ipynb
@@ -93,17 +93,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### L'interpréteur Python (mode intéractif)\n",
+    "### Python interpreter (interactive mode)\n",
     "\n",
-    "L'interpréteur Python se lance avec la commande ``python``.\n",
+    "The Python interpretor can be launched with the command ``python``.\n",
     "\n",
     "<!-- <img src=\"files/images/python-screenshot.jpg\" width=\"600\"> -->\n",
     "<img src=\"https://raw.github.com/jrjohansson/scientific-python-lectures/master/images/python-screenshot.jpg\" width=\"600\">\n",
     "\n",
-    "* mémoriser les commandes lancées précédemment avec les flèches (haut et bas).\n",
+    "It allows to:\n",
+    "\n",
+    "* memorise previously launched commands with the arrows (up and down).\n",
     "* search in history with ctrl+R\n",
-    "* auto-complétion avec Tab.\n",
-    "* édition de code inline\n"
+    "* auto-completion with Tab.\n",
+    "* inline code edition"
    ]
   },
   {
@@ -112,21 +114,21 @@
    "source": [
     "### IPython\n",
     "\n",
-    "IPython est un shell interactif beaucoup plus avancé.\n",
+    "IPython is a more refined interactive shell.\n",
     "\n",
     "<!-- <img src=\"files/images/ipython-screenshot.jpg\" width=\"600\"> -->\n",
     "<img src=\"https://raw.github.com/jrjohansson/scientific-python-lectures/master/images/ipython-screenshot.jpg\" width=\"600\">\n",
     "\n",
-    "Il permet notamment de:\n",
+    "One can:\n",
     "\n",
-    "* mémoriser les commandes lancées précédemment avec les flèches (haut et bas).\n",
+    "* memorise previously launched commands with the arrows (up and down).\n",
     "* search in history with ctrl+R\n",
-    "* auto-complétion avec Tab.\n",
-    "* édition de code inline\n",
-    "* accès simple à la doc\n",
+    "* auto-completion with Tab.\n",
+    "* inline code edition\n",
+    "* easy documentation access\n",
     "* debug\n",
     "\n",
-    "Remarque: l'option ```ipython --pylab``` sera utile pour la gestion des images..."
+    "Note: running ```ipython --pylab``` will help opening several images "
    ]
   },
   {
@@ -135,19 +137,16 @@
    "source": [
     "### Jupyter notebook\n",
     "\n",
-    "[Jupyter notebook](<https://jupyter.org/) comme Mathematica, Matlab ou Maple dans une page web.\n",
+    "[Jupyter notebook](<https://jupyter.org/) is similar to Mathematica, Matlab or Maple, in a web browser.\n",
     "\n",
     "<!-- <img src=\"files/images/ipython-notebook-screenshot.jpg\" width=\"800\"> -->\n",
     "<img src=\"https://jupyter.org/assets/jupyterpreview.png\" width=\"800\">\n",
     "\n",
-    "Pour lancer jupyter notebook\n",
-    "```\n",
-    "$ jupyter notebook\n",
-    "```\n",
+    "Launch it with the command `jupyter notebook`\n",
     "\n",
-    "depuis un dossier où seront stockés les notebooks (fichiers *.ipynb), ou bien un dossier parent.\n",
+    "in a directory where your notebooks are/will be stored (files with extension *.ipynb); or in a parent directory .\n",
     "\n",
-    "Pour le cas des salles machines de l'université de Montpellier, cf.\n",
+    "For practical rooms at Université de Montpellier, cf.\n",
     "http://josephsalmon.eu/enseignement/Montpellier/HLMA310/IntroPython.pdf , page 13\n"
    ]
   },
@@ -489,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import *  # NEVER DO THAT\n",
+    "from math import *  # NEVER DO THAT, EVER!!!\n",
     "tanh(1)"
    ]
   },
@@ -878,10 +877,30 @@
    "outputs": [],
    "source": [
     "s = 'Ciao Ciao!'\n",
-    "# ou avec \" \"\n",
-    "s = \"Ciao Ciao!\"\n",
-    "print(s)\n",
+    "# or use \" \"\n",
+    "s1 = \"Ciao Ciao!\"\n",
+    "# or use \"\"\" \"\"\"\n",
+    "s2 = \"\"\"Ciao Ciao\"\"\"\n",
+    "print(s, s1, s2)\n",
     "print(type(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='red'>EXERCISE : quotes and double quotes</font>\n",
+    "Create the following string: \"Hello! how's it going?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XXX\n",
+    "'''\"Hello! how's it going?\"'''"
    ]
   },
   {
@@ -1220,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,21 +1268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'math' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-a0249720ba91>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"Le nombre {0:s} est égal à {1:1.111}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"pi\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'math' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = \"Le nombre {0:s} est égal à {1:1.111}\"\n",
     "print(s.format(\"pi\", math.pi))"
@@ -2269,9 +2276,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Compréhension de liste:**\n",
+    "**List comprehension:**\n",
     "\n",
-    "Boucles `for`:"
+    "`for` loops:"
    ]
   },
   {
@@ -2323,17 +2330,19 @@
    "source": [
     "### <font color='red'>EXERCISE: An old $\\pi$ approximation</font>\n",
     "    \n",
-    "Calculer une approximation de $\\pi$ par la formule de Wallis (avec une boucle `for`)\n",
+    "Compute an approximation of $\\pi$ thanks to the Wallis formula (hing: use a `for` loop)\n",
     "\\begin{align}\n",
     "    \\text{Formule de Wallis:}\\quad \\pi&= 2 \\cdot\\prod_{n=1}^{\\infty }\\left({\\frac{4 n^{2}}{4 n^{2} - 1}}\\right)\n",
     "\\end{align}\n",
     "\n",
-    "Voir: https://fr.wikipedia.org/wiki/Produit_de_Wallis"
+    "More details here:\n",
+    "(fr) https://fr.wikipedia.org/wiki/Produit_de_Wallis\n",
+    "(en) https://en.wikipedia.org/wiki/Wallis_product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,7 +2353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fonctions\n",
+    "## Functions\n",
     "\n",
     "Une fonction en Python est définie avec le mot clé `def`, suivi par le nom de la fonction, la signature entre parenthèses `()`, et un `:` en fin de ligne\n",
     "\n",
@@ -2704,9 +2713,9 @@
     "* Certains noms de méthodes ont un sens particulier, par exemple : \n",
     "   * `__init__`: nom de la méthode invoquée à la création de l'objet\n",
     "   * `__str__` : méthode invoquée lorsque une représentation de la classe sous forme de chaîne de caractères est demandée, par exemple quand la classe est passée à `print`\n",
-    "   * voir http://docs.python.org/2/reference/datamodel.html#special-method-names pour les autres noms spéciaux\n",
+    "   * voir http://docs.python.org/3/reference/datamodel.html#special-method-names pour les autres noms spéciaux\n",
     "\n",
-    "### Exemple\n",
+    "### Example\n",
     "  "
    ]
   },
@@ -2750,10 +2759,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p1 = Point(x=0, y=0) # appel à __init__ ;\n",
+    "p1 = Point(x=0, y=0)  # appel à __init__ ;\n",
     "print(p1.x)\n",
     "print(p1.y)\n",
-    "print(\"{0}\".format(p1))         # appel à la méthode __str__\n",
+    "print(\"{0}\".format(p1))  # appel à la méthode __str__\n",
     "p1()"
    ]
   },
@@ -2817,31 +2826,40 @@
    "source": [
     "* Une utilisation typique: arrêter l'exécution d'une fonction en cas d'erreur:\n",
     "\n",
-    "        def my_function(arguments):\n",
-    "    \n",
-    "        if not verify(arguments):\n",
-    "            raise Expection(\"Invalid arguments\")\n",
-    "        \n",
-    "        # et on continue"
+    "```\n",
+    "def my_function(arguments):\n",
+    "\n",
+    "if not verify(arguments):\n",
+    "    raise Expection(\"Invalid arguments\")\n",
+    "\n",
+    "# et on continue\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On utilise `try`, `except`, `finally`  pour maîtriser les erreurs:\n",
+    "On utilise `try`, `except`, `finally` pour maîtriser les erreurs:\n",
     "\n",
-    "    try:\n",
-    "        # normal code 1 goes here\n",
-    "    except:\n",
-    "        # code for error handling goes here\n",
-    "        # this code 2 is not executed unless the code 1\n",
-    "        # above generated an error\n",
-    "    finally:\n",
-    "        # optional. This clause is executed no matter what,\n",
-    "        # and is generally used to release external resources.\n",
-    "\n",
-    "Par exemple:"
+    "```\n",
+    "try:\n",
+    "    # normal code 1 goes here\n",
+    "except:\n",
+    "    # code for error handling goes here\n",
+    "    # this code 2 is not executed unless the code 1\n",
+    "    # above generated an error\n",
+    "finally:\n",
+    "    # optional. This clause is executed no matter what,\n",
+    "    # and is generally used to release external resources.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example"
    ]
   },
   {
@@ -2854,7 +2872,7 @@
    "source": [
     "try:\n",
     "    print(\"test_var\")\n",
-    "    e =4\n",
+    "    e = 4\n",
     "    # genere une erreur: la variable test n'est pas définie\n",
     "    print(test_var)\n",
     "except:\n",
@@ -2863,7 +2881,7 @@
     "    print(\"On peut finaliser quoi qu'il arrive...\")\n",
     "\n",
     "print(\"mais on continu...ca ne plante pas!\")\n",
-    "print('Attention', 'e =', e, 'est toujours là')"
+    "print('Attention', 'e =', e, 'est encore défini')"
    ]
   },
   {
@@ -2872,7 +2890,7 @@
    "source": [
     "Pour obtenir de l'information sur l'erreur: accéder à l'instance de la classe `Exception` concernée:\n",
     "\n",
-    "    except Exception as e:"
+    "`except Exception as e`"
    ]
   },
   {
@@ -2892,7 +2910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The with statement"
+    "### The `with` statement"
    ]
   },
   {
@@ -2903,18 +2921,18 @@
    "source": [
     "fname = \"scripts/hello-world.py\"\n",
     "try:\n",
-    "   # 1/0\n",
-    "   file = open(fname)\n",
-    "   data = file.read()\n",
-    "   print(data)\n",
+    "    # 1/0\n",
+    "    file = open(fname)\n",
+    "    data = file.read()\n",
+    "    print(data)\n",
     "except FileNotFoundError:\n",
     "    print(\"File not found!\")\n",
     "except (RuntimeError, TypeError, NameError, ZeroDivisionError):\n",
     "    print(\"Specific Error message 2\")\n",
-    "except :\n",
+    "except:\n",
     "    print(\"Generic error message\")\n",
     "finally:\n",
-    "    file.close() #important to release the access to the file !\n"
+    "    file.close()  # important to release the access to the file !"
    ]
   },
   {
@@ -2960,11 +2978,16 @@
     "e = 0\n",
     "print(e)\n",
     "\n",
-    "for i in range(1): e = 1\n",
+    "for i in range(1):\n",
+    "    e = 1\n",
     "print(e)\n",
     "\n",
-    "def f() : e =2\n",
-    "print(e)\n"
+    "\n",
+    "def f():\n",
+    "    e = 2\n",
+    "\n",
+    "\n",
+    "print(e)"
    ]
   },
   {
@@ -2981,45 +3004,25 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "print(os.path.join('~', 'work', 'src'))  # permet de fonctionner sur Linux / Windows /Mac\n",
-    "print(os.path.join(os.getcwd(),'new_directory'))\n",
-    "# os.path.expanduser?\n",
-    "# print(os.path.expanduser(os.path.join('~', 'work', 'src')))\n"
+    "# permet de fonctionner sur Linux / Windows /Mac\n",
+    "print(os.path.join('~', 'work', 'src'))\n",
+    "print(os.path.join(os.getcwd(), 'new_directory'))\n",
+    "os.path.expanduser?\n",
+    "print(os.path.expanduser(os.path.join('~', 'work', 'src')))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Quelques liens\n",
+    "## More links\n",
     "\n",
-    "* http://www.python.org - Page Python officielle.\n",
-    "* http://www.python.org/dev/peps/pep-0008 - Recommandations de style d'écriture.\n",
-    "* http://www.greenteapress.com/thinkpython/ - Un livre gratuit sur Python.\n",
-    "* [Python Essential Reference](http://www.amazon.com/Python-Essential-Reference-4th-Edition/dp/0672329786) - Un bon livre de référence.\n",
-    "* [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) - Un bon livre pour les sciences des données avec Python"
+    "* http://www.python.org - Python official webpage\n",
+    "* http://www.python.org/dev/peps/pep-0008 - Style and writing recommendation\n",
+    "* http://www.greenteapress.com/thinkpython/ - A free book on python\n",
+    "* [Python Essential Reference](http://www.amazon.com/Python-Essential-Reference-4th-Edition/dp/0672329786) - a good reference for general Python coding \n",
+    "* [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/) - an excellent book for data science in Python"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
