--- a/Intro-Python/Intro-Python.ipynb
+++ b/Intro-Python/Intro-Python.ipynb
@@ -258,11 +258,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Les noms de variable peuvent contenir `a-z`, `A-Z`, `0-9` et quelques caractères spéciaux tels que `_` mais commencent toujours par une lettre. \n",
+    "Variable names can contain letters `a-z`, `A-Z`, numbers `0-9`and a few special characters such as `_` they **ALWAYS** must start by a letter. \n",
     "\n",
-    "Par convention les noms de variables sont en minuscule.\n",
+    "By convention, variable names are usually lowercase (rem: an uppercase letter is used for Class names only).\n",
     "\n",
-    "Quelques noms de variable ne sont pas autorisés car déjà utilisés par le langage:\n",
+    "Some variables names are forbidden since they are already defined by Python:\n",
     "\n",
     "    and, as, assert, break, class, continue, def, del, elif, else, except, \n",
     "    exec, finally, for, from, global, if, import, in, is, lambda, not, or,\n",
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int a = 1;  # code C ... produit donc une erreur en Python"
+    "int a = 1;  # code C ... leads to an error in Python"
    ]
   },
   {
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = 2.1  # nombre flottant\n",
+    "c = 2.1  # float (floating point number)\n",
     "print(type(c))"
    ]
   },
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 1.5 + 1j  # nombre complexe\n",
+    "a = 1.5 + 1j  # complex number\n",
     "print(a.real)\n",
     "print(a.imag)\n",
     "print(1j)\n",
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "2 ** 10  # exposant, attention pas ^"
+    "2 ** 10  # exponant, do not use `^` in Python"
    ]
   },
   {
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "8 % 3  # reste de la division euclidienne (modulo)"
+    "8 % 3  # reminder in the Euclidean division (modulo)"
    ]
   },
   {
@@ -396,11 +396,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "3 / 2  # float par défaut"
+    "3 / 2  # float by default"
    ]
   },
   {
@@ -416,10 +427,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La bibliothèque standard et ses modules\n",
+    "## The standard libraries and its packages\n",
     "\n",
-    " * Les fonctions Python sont organisées par *modules*\n",
-    " * Bibliothèque standard Python (*Python Standard Library*) : collection de modules donnant accès à des fonctionnalités de bases : appels au système d'exploitation, gestion des fichiers, gestion des chaînes de caractères, interface réseau, etc.\n",
+    " * Python functions are organized by *modules*\n",
+    " * Python Standard Library : package collection  to access standard functions (low level), such as call the OS (operating system), file management, string management, web interface, etc.\n",
     "\n",
     "### References\n",
     " \n",
@@ -461,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another way to use a pacakge is to import only the functions that you need:"
+    "Another way to use a package is to import only the functions that you need:"
    ]
   },
   {
@@ -479,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WARNING: do not load all functions from a package, there is a risk that you redefine some existing functions without noticing."
+    "**WARNING**: do not load all functions from a package, there is a risk that you redefine some existing functions without noticing."
    ]
   },
   {
@@ -496,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Popular method: use a nickname for a package (we will see classical ones like: `np, pd, sns, plt, skl,` etc.)"
+    "Popular method: use a standard nickname for a package (we will see classical ones like: `np, pd, sns, plt, skl,` etc.)"
    ]
   },
   {
@@ -515,14 +526,22 @@
    "source": [
     "### Inspecting a package\n",
     "\n",
-    " * Une fois un module importé on peut lister les symboles disponibles avec la fonction `dir`:"
+    " * Once a package is imported it is possible to list the functions available with `dir`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'copysign', 'cos', 'cosh', 'degrees', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'pi', 'pow', 'radians', 'remainder', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc']\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "print(dir(math))"
@@ -532,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Pour accéder à l'aide : `help`"
+    "* To access the documentation use `help`"
    ]
   },
   {
@@ -548,12 +567,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * Dans IPython ou en Python on peut faire:"
+    " * In IPython or Jupyter one can also use:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2864,11 +2883,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test_var\n",
+      "Caught an expection\n",
+      "On peut finaliser quoi qu'il arrive...\n",
+      "mais on continue...ca ne plante pas!\n",
+      "Attention e = 4 est encore défini\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    print(\"test_var\")\n",
@@ -2880,7 +2911,7 @@
     "finally:\n",
     "    print(\"On peut finaliser quoi qu'il arrive...\")\n",
     "\n",
-    "print(\"mais on continu...ca ne plante pas!\")\n",
+    "print(\"mais on continue...ca ne plante pas!\")\n",
     "print('Attention', 'e =', e, 'est encore défini')"
    ]
   },
@@ -3064,7 +3095,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "308.833px"
+    "width": "224.667px"
    },
    "toc_section_display": true,
    "toc_window_display": true
