Fix small typos in Intro-Python.ipynb

--- a/Intro-Python/Intro-Python.ipynb
+++ b/Intro-Python/Intro-Python.ipynb
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "# download the file with a shell\n",
-    "! wget http://josephsalmon.eu/enseignement/Montpellier/HMMA238/hello-world.py script\n",
+    "! wget http://josephsalmon.eu/enseignement/Montpellier/HMMA238/hello-world.py scripts/hello-world.py\n",
     "\n",
     "# Equivalent code in python\n",
     "# import urllib.request\n",
@@ -1138,7 +1138,7 @@
    "outputs": [],
    "source": [
     "print(\"ssEslk\".upper())\n",
-    "print(\"kljljdsfsdf\".capitalize())\n",
+    "print(\"kljlj, dsfsdf\".capitalize())\n",
     "print(\":\".join(\"Python\"))\n",
     "print(\":\".join([\"Pyt\", \"hon\"]))          # take a list \n",
     "print(\"guru99 career guru99\".split(' ')) # return a list"
@@ -1158,8 +1158,9 @@
    "outputs": [],
    "source": [
     "x = \"Guru99\"\n",
-    "x.replace(\"Guru99\",\"Python\")\n",
-    "print(x)"
+    "y = x.replace(\"Guru99\",\"Python\")\n",
+    "print(x)\n",
+    "print(y)"
    ]
   },
   {
@@ -1671,12 +1672,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Map and "
+    "### Map and zip"
    ]
   },
   {
@@ -2105,6 +2104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(params)\n",
     "for key, value in params.items():\n",
     "    print(key, \" = \", value)"
    ]
@@ -2805,9 +2805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
