Update Intro-Python notebook

--- a/Intro-Python/Intro-Python.ipynb
+++ b/Intro-Python/Intro-Python.ipynb
@@ -899,8 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# XXX\n",
-    "'''\"Hello! how's it going?\"'''"
+    "# XXX"
    ]
   },
   {
@@ -2752,7 +2751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour créer une nouvelle instance de la classe:"
+    "To create a new instance of the class `Point`:"
    ]
   },
   {
@@ -2784,7 +2783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour invoquer une méthode de la classe sur une instance `p` de celle-ci:"
+    "To run a method of the object `p1` (which is an instance of `Point`) simply use the dot:"
    ]
   },
   {
@@ -2805,10 +2804,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Remarques\n",
+    "### Remarks\n",
     "\n",
-    " * L'appel d'une méthode de classe peut modifier l'état d'une instance particulière\n",
-    " * Cela n'affecte ni les autres instances ni les variables globales"
+    " * A method of a class is able to modify the state of a particular instance. This does not alter the other instantiations of the class.\n",
+    " * method that do not depend of a particular instantiation can be decorated with the @staticmethod keyword."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='red'>EXERCISE : Gaussians </font>\n",
+    "\n",
+    "Implement a class `Gaussian` with attributes `mean` and `std` with a method \n",
+    "   - `__str__` returning a string with the expression of the density\n",
+    "   - `__eq__`  testing the equality of two instances.\n",
+    "   - `__add__` implementing the addition of independant Gaussian "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gaussian:\n",
+    "    #XXX\n",
+    "\n",
+    "q1 = Gaussian(0, 1)\n",
+    "q2 = Gaussian(1, 2)\n",
+    " \n",
+    "print(q1)\n",
+    "print(q2)\n",
+    "print(q1 == q1)\n",
+    "print(q1 == q2)\n",
+    "print(q1 + q2)\n",
+    "\n",
+    "# should display\n",
+    "# The density function is: exp(-(x - 0)^2 / (2*1^2)) / sqrt(2 * pi 1^2)\n",
+    "# The density function is: exp(-(x - 1)^2 / (2*2^2)) / sqrt(2 * pi 2^2)\n",
+    "# True\n",
+    "# False\n",
+    "# The density function is: exp(-(x - 1)^2 / (2*2.6457513110645907^2)) / sqrt(2 * pi 2.6457513110645907^2)\n",
+    "\n"
    ]
   },
   {
@@ -2817,8 +2855,8 @@
    "source": [
     "## Exceptions\n",
     "\n",
-    " * Dans Python les erreurs sont gérées à travers des *\"Exceptions\"*\n",
-    " * Une erreur provoque une *Exception* qui interrompt l'exécution normale du programme\n",
+    " * In Python errors are handled through `Exceptions`\n",
+    " * An error throw an `Exception` interrupting the normal code execution\n",
     " * L'exécution peut éventuellement reprendre à l'intérieur d'un bloc de code `try` - `except`\n"
    ]
   },
@@ -2826,15 +2864,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Une utilisation typique: arrêter l'exécution d'une fonction en cas d'erreur:\n",
+    "* A typical use case: stop the program when an error occurs:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "def my_function(arguments):\n",
     "\n",
-    "if not verify(arguments):\n",
-    "    raise Expection(\"Invalid arguments\")\n",
+    "    if not verify(arguments):\n",
+    "        raise Expection(\"Invalid arguments\")\n",
     "\n",
-    "# et on continue\n",
+    "    # keep continuing\n",
     "```"
    ]
   },
@@ -2842,9 +2880,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On utilise `try`, `except`, `finally` pour maîtriser les erreurs:\n",
+    "One may use `try`, `except`, `finally` to prevent errors to stop the program:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "try:\n",
     "    # normal code 1 goes here\n",
     "except:\n",
@@ -2872,25 +2910,22 @@
    "source": [
     "try:\n",
     "    print(\"test_var\")\n",
-    "    e = 4\n",
-    "    # genere une erreur: la variable test n'est pas définie\n",
-    "    print(test_var)\n",
+    "    e = 4 \n",
+    "    print(test_var) # raise an error: the test_var variable is not defined\n",
     "except:\n",
     "    print(\"Caught an expection\")\n",
     "finally:\n",
-    "    print(\"On peut finaliser quoi qu'il arrive...\")\n",
+    "    print(\"This code is executed every time\")\n",
     "\n",
-    "print(\"mais on continue...ca ne plante pas!\")\n",
-    "print('Attention', 'e =', e, 'est encore défini')"
+    "print(\"The program keep continuing... it does not freeze!\")\n",
+    "print('Beware! the variable ', 'e =', e, 'is still defined.')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour obtenir de l'information sur l'erreur: accéder à l'instance de la classe `Exception` concernée:\n",
-    "\n",
-    "`except Exception as e`"
+    "To obtain some informations on the error: it is possible to access the intance of the `Exception` class thrown by the program through the syntax:"
    ]
   },
   {
@@ -2901,7 +2936,7 @@
    "source": [
     "try:\n",
     "    print(\"test\")\n",
-    "    print(testtt)    # erreur: la variable test est non définie\n",
+    "    print(testtt)       # error: the variable testtt is not defined\n",
     "except Exception as e:\n",
     "    print(\"Caught an expection:\", e)"
    ]
@@ -2942,9 +2977,9 @@
    "outputs": [],
    "source": [
     "with open(fname) as file: # Use file to refer to the file object\n",
-    "   data = file.read()\n",
-    "   print(data)\n",
-    "# at the end of the code chunk, the file.__exit__() method is called (ie file.close() is done automatically)"
+    "    data = file.read()\n",
+    "    print(data)\n",
+    "    # at the end of the code chunk, the file.__exit__() method is called (ie file.close() is done automatically)"
    ]
   },
   {
@@ -2954,12 +2989,31 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "  with open(\"scripts/hello-world2.py\") as file: # Use file to refer to the file object\n",
-    "     data = file.read()\n",
-    "     print(data)\n",
-    "     # at the end of the code chunk, the file.__exit__() method is called (ie file.close() is done automatically)\n",
+    "    with open(\"scripts/hello-world2.py\") as file: # Use file to refer to the file object\n",
+    "        data = file.read()\n",
+    "        print(data)\n",
+    "        # at the end of the code chunk, the file.__exit__() method is called (ie file.close() is done automatically)\n",
     "except:\n",
-    "  print(\"Ooooooops\")  \n"
+    "    print(\"Ooooooops, the file does not exists...\")  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='red'>EXERCISE : Gaussians (again)</font>\n",
+    "\n",
+    "Update the constructor of the `Gaussian` class to check if the user has provided the right type of inputs (see also `assert` and `isinstance` routines). Print a custom explicit error message if it is not the case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Gaussian:\n",
+    "    #XXX"
    ]
   },
   {
@@ -2980,6 +3034,7 @@
     "\n",
     "for i in range(1):\n",
     "    e = 1\n",
+    "    \n",
     "print(e)\n",
     "\n",
     "\n",
@@ -3015,6 +3070,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <font color='red'>EXERCISE : Create a bunch of files</font>\n",
+    "\n",
+    "Write a simple script that creates, in the sub-directory `scripts`, the following text files: `myDb_0.txt`, `myDb_001.txt`, `myDb_002.txt`, ..., `myDb_049.txt`. The `i`-th file should contains a single line with the `i` first digits of pi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import math\n",
+    "\n",
+    "# XXX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## More links\n",
     "\n",
     "* http://www.python.org - Python official webpage\n",
@@ -3042,7 +3118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -3057,7 +3133,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "224.667px"
+    "width": "305px"
    },
    "toc_section_display": true,
    "toc_window_display": true
