update on numpy / unmerge matplotlib information

--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `numpy` (multi-dimensional arrays) and `matplotlib` (2D and 3D visualization)\n",
+    "# `numpy` (multi-dimensional arrays) \n",
     "\n",
     "      Joseph Salmon : joseph.salmon@umontpellier.fr\n",
     "\n",
@@ -15,19 +15,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib notebook"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Remark**: the \"magic\" command `%matplotlib inline` can also be helpful (default)  \n",
     "\n",
     "See also:\n",
     "- https://jakevdp.github.io/PythonDataScienceHandbook/01.03-magic-commands.html\n",
@@ -55,20 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " * `matplotlib` est un module performant pour la génération de graphiques en 2D et 3D\n",
-    "   * syntaxe très proche de celle de Matlab\n",
-    "   * supporte texte et étiquettes en $\\LaTeX$\n",
-    "   * sortie de qualité dans divers formats (.png, .pdf, .svg, .gif,etc.)\n",
-    "   * interface graphique intéractive pour explorer les figures\n",
-    " \n",
-    "* `guiqwt.pyplot` est une alternative intéressante qui reprend la syntaxe de `matplotlib` (plus récente, encore peu utilisée)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pour utiliser `numpy` et `matplotlib` il faut commencer par les importer :"
+    "Pour utiliser `numpy` il faut commencer par l'importer :"
    ]
   },
   {
@@ -77,8 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np  # usual shortcut\n",
-    "import matplotlib.pyplot as plt  # usual shortcut"
+    "import numpy as np  # usual shortcut"
    ]
   },
   {
@@ -807,7 +783,7 @@
    "source": [
     "### `numpy` default storing format  (`.npy`)\n",
     "\n",
-    "Pour sauvegarder et recharger des *array* `numpy` : `numpy.save` et `numpy.load` :"
+    "To save and load `numpy` *arrays* : `numpy.save` et `numpy.load` :"
    ]
   },
   {
@@ -926,7 +902,8 @@
    "source": [
     "print(np.zeros((3,), dtype=int).shape)\n",
     "print(np.zeros((1, 3), dtype=int).shape)\n",
-    "print(np.zeros((3, 1), dtype=int).shape)"
+    "print(np.zeros((3, 1), dtype=int).shape)\n",
+    "print(np.zeros((3, 2, 3), dtype=int).shape)\n"
    ]
   },
   {
@@ -937,7 +914,8 @@
    "source": [
     "print(np.zeros((3,), dtype=int).ndim)\n",
     "print(np.zeros((1, 3), dtype=int).ndim)\n",
-    "print(np.zeros((3, 1), dtype=int).ndim)"
+    "print(np.zeros((3, 1), dtype=int).ndim)\n",
+    "print(np.zeros((3, 2, 3), dtype=int).ndim)"
    ]
   },
   {
@@ -1064,16 +1042,6 @@
    "outputs": [],
    "source": [
     "M"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color='red'> EXERCISE : slicing </font>\n",
-    "\n",
-    "Create a $6 \\times 6$ matrix where the integers from 1 to 36 are stored (in columns ordering).\n",
-    "Then, substitute all even number by 0, without using a loop."
    ]
   },
   {
@@ -1226,7 +1194,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "A[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "A[-3:] # les 3 derniers éléments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='red'> EXERCISE : slicing </font>\n",
+    "Compute the finite differencing of $A$, i.e., the vector $A[k+1]-A[k]$ for $k=0, \\dots,n-1$ (where $n$ is the length of A).\n",
+    "Remark: this is often used to perform derivatives approximations."
    ]
   },
   {
@@ -1283,6 +1269,16 @@
     "print(A[[0, 1, 3]])\n",
     "print(A[[0, 1, 3],:])\n",
     "print(A[:,[0, 1, 3]])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='red'> EXERCISE : slicing </font>\n",
+    "\n",
+    "Create a $6 \\times 6$ matrix where the integers from 1 to 36 are stored (in columns ordering).\n",
+    "Then, substitute all even number by 0, **without using a loop**."
    ]
   },
   {
@@ -1562,7 +1558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "S1=(A + A.T) / 2 # la projection de A sur les matrices symétriques"
+    "S1 = (A + A.T) / 2  # la projection de A sur les matrices symétriques"
    ]
   },
   {
@@ -1571,7 +1567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A1=(A - A.T) / 2 # la projection de A sur les matrices anti-symétriques\n",
+    "A1 = (A - A.T) / 2  # la projection de A sur les matrices anti-symétriques\n",
     "print(A1)"
    ]
   },
@@ -1581,9 +1577,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(A1+S1) # donne A\n",
-    "np.trace(S1.dot(A1)) # A1 et S1 sont orthogonaux pour le pdt scalaire \n",
-    "#tr(S1^T A1)"
+    "print(A1+S1)  # donne A\n",
+    "np.trace(S1.dot(A1))  # A1 et S1 sont orthogonaux pour le pdt scalaire\n",
+    "# tr(S1^T A1)"
    ]
   },
   {
@@ -1676,7 +1672,8 @@
     "print(np.dot(A, A))  # multiplication matrice\n",
     "print(A.dot(A))  # multiplication matrice\n",
     "\n",
-    "print(A * A)  # multiplication élément par élément"
+    "print(A * A)  # multiplication élément par élément\n",
+    "A @ A"
    ]
   },
   {
