udpate on Numpy-Matplotlib

--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -1583,10 +1583,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(np.dot(A, A))  # multiplication matrice\n",
-    "print(A.dot(A))  # multiplication matrice\n",
-    "print(A * A)  # multiplication élément par élément\n",
-    "A @ A"
+    "print(np.dot(A, A))  # matrix / matrix multiplication\n",
+    "print(A.dot(A))  # matrix / matrix multiplication\n",
+    "print(A @ A) # matrix / matrix multiplication\n",
+    "print(A * A)  # element-wise matrix / matrix multiplication"
    ]
   },
   {
@@ -1595,7 +1595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A.dot(v1)"
+    "v1"
    ]
   },
   {
@@ -1604,7 +1604,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.dot(v1, v1)"
+    "A.dot(v1) # matrix / vector multiplication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.dot(v1, v1)  # vectors inner product"
    ]
   },
   {
@@ -1634,14 +1643,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Orthogonality for the trace scalar product\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Inner_product_space#Real_matrices"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "print(A1 + S1)  # donne A\n",
-    "np.trace(S1.dot(A1))  # A1 et S1 sont orthogonaux pour le pdt scalaire\n",
-    "# tr(S1^T A1)"
+    "np.trace(S1.dot(A1))"
    ]
   },
   {
@@ -1652,6 +1669,13 @@
    "source": [
     "print(v1)\n",
     "print(v1 * v1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Point-wise multiplication:"
    ]
   },
   {
@@ -1913,7 +1937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### variance et écart type"
+    "#### Variance and standard deviation"
    ]
   },
   {
@@ -1939,7 +1963,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### min et max"
+    "### <font color='red'> EXERCISE : Degrees of Freedom </font>\n",
+    "Explain the difference in behavior of the last two cells.\n",
+    "See more on this theme and on Stein's theory here: http://www.stat.cmu.edu/~larry/=sml/stein.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### min / max"
    ]
   },
   {
@@ -2235,8 +2268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(A - A[:,0])  # FAUX\n",
-    "print(A - A[:,0].reshape((2, 1)))  # OK"
+    "print(A - A[:,0]) \n",
+    "print(A - A[:,0].reshape((2, 1)))"
    ]
   },
   {
@@ -2300,14 +2333,16 @@
    "source": [
     "### Attention !\n",
     "\n",
-    "La variable originale est aussi modifiée ! B n'est qu'une nouvelle *vue* de A."
+    "La variable originale est aussi modifiée ! B n'est qu'une nouvelle **vue** (view) de A."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pour transformer un *array* multi-dimmensionel en un vecteur. Mais cette fois-ci, une copie des données est créée :"
+    "Pour transformer un *array* multi-dimmensionel en un vecteur voici comment faire.\n",
+    "Cette fois-ci, une copie des données est créée (ici avec `flatten`)\n",
+    "https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.flatten.html"
    ]
   },
   {
@@ -2316,9 +2351,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[0,  2],[ 3,  4]])\n",
+    "A = np.array([[0,  2], [3,  4]])\n",
     "B = A.flatten()\n",
-    "print(A,B)"
+    "print(A, B)"
    ]
   },
   {
@@ -2383,7 +2418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v[:,np.newaxis].shape"
+    "v[:, np.newaxis].shape"
    ]
   },
   {
@@ -2429,7 +2464,7 @@
    "outputs": [],
    "source": [
     "# répéter chaque élément 3 fois\n",
-    "np.repeat(a, 3) # résultat 1-d"
+    "np.repeat(a, 3)  # résultat 1-d"
    ]
   },
   {
@@ -2569,10 +2604,10 @@
    "source": [
     "for row_idx, row in enumerate(M):\n",
     "    print(\"row_idx\", row_idx, \"row\", row)\n",
-    "    \n",
+    "\n",
     "    for col_idx, element in enumerate(row):\n",
     "        print(\"col_idx\", col_idx, \"element\", element)\n",
-    "       \n",
+    "\n",
     "        # update the matrix M: square each element\n",
     "        M[row_idx, col_idx] = element ** 2"
    ]
@@ -2805,12 +2840,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <font color='red'> EXERCISE : Mutlivariate Gaussian distribution</font>\n",
+    "Draw the density of a 2D Gaussian distribution.\n",
+    "\n",
+    "*Hint*: see\n",
+    "https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.multivariate_normal.html\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pour aller plus loin\n",
     "\n",
     "* http://numpy.scipy.org\n",
     "* http://scipy.org/Tentative_NumPy_Tutorial\n",
-    "* http://scipy-lectures.org/ - une bible pour les sujets avancés (e.g. matrice sparse)\n",
-    "* http://scipy.org/NumPy_for_Matlab_Users - Un guide pour les utilisateurs de MATLAB."
+    "* http://scipy-lectures.org/ - the holly bible for advance features (e.g. matrice sparse)\n",
+    "* http://scipy.org/NumPy_for_Matlab_Users - guide migrating MATLAB users"
    ]
   },
   {
