update and adding scipy

--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -2851,11 +2851,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pour aller plus loin\n",
+    "## Further reading:\n",
     "\n",
     "* http://numpy.scipy.org\n",
-    "* http://scipy.org/Tentative_NumPy_Tutorial\n",
-    "* http://scipy-lectures.org/ - the holly bible for advance features (e.g. matrice sparse)\n",
+    "* http://scipy.github.io/old-wiki/pages/Tentative_NumPy_Tutorial.html\n",
+    "* http://scipy-lectures.org/ - the holly bible for advance features (e.g. sparse matrices)\n",
     "* http://scipy.org/NumPy_for_Matlab_Users - guide migrating MATLAB users"
    ]
   },
