locating file in Numpy (for laius on tree structure/directories

--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -2848,6 +2848,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Bonus: locating a source of the code you run:\n",
+    "import inspect\n",
+    "import numpy as np\n",
+    "inspect.getfile(np.linalg.norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Bonus: display the source of the code you run (2nd version)\n",
+    "inspect.getsourcelines(np.linalg.norm) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Bonus: locating a source of the code you run:\n",
+    "np.linalg.norm??"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2858,13 +2890,6 @@
     "* http://scipy-lectures.org/ - the holly bible for advance features (e.g. sparse matrices)\n",
     "* http://scipy.org/NumPy_for_Matlab_Users - guide migrating MATLAB users"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
