adding exercice recursive mean

--- a/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
+++ b/Numpy-Matplotlib/Numpy-Matplotlib.ipynb
@@ -1937,6 +1937,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <font color='red'> EXERCICE : Moyenne en ligne </font>\n",
+    "Ecrire une fonction qui calcule la moyenne $\\bar{x}_n$ de maniere recursive (sans \n",
+    "utiliser `np.sum`)\n",
+    "\n",
+    "Hint:\n",
+    "\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\bar{x}_{n} & = \\frac{1}{n} \\sum_{i=1}^{n}x_i \\\\\n",
+    "              & = \\frac{1}{n} \\left(\\sum_{i=1}^{n-1} x_i  + x_{n} \\right)\\\\\n",
+    "              & = \\frac{1}{n} \\left( (n-1) \\cdot \\bar{x}_{n-1}  + x_{n} \\right)\\\\      \n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Variance and standard deviation"
    ]
   },
